--- a/test.html
+++ b/test.html
@@ -1,15 +1,6 @@
 <html>
 <body>
-  <img src="https://hitscounter.dev/api/hit?url=https%3A%2F%2Faaiwagon.github.io%2Ftest.html&label=test&icon=github&color=%23198754">
-  <script>
-     // Your application has indicated there's an error
-    window.setTimeout(function(){
-
-        // Move to a new location or you can do something else
-        window.location.href = "https://www.google.co.uk";
-
-    }, 1000);
-  </script>
+  <!--img src="https://hitscounter.dev/api/hit?url=https%3A%2F%2Faaiwagon.github.io%2Ftest.html&label=test&icon=github&color=%23198754"-->
 </body>
   
 </html>
